--- a/style.css
+++ b/style.css
@@ -47,7 +47,38 @@ h2 {
   justify-content: space-between;
   align-items: center;
   color: grey;
+  padding: 0.5rem 0rem;
+  text-transform: capitalize;
 }
 .gallery-info a {
   color: grey;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  padding: 2rem 0rem;
+  width: 80%;
+  margin: auto;
+  row-gap: 3rem;
+  column-gap: 2rem;
+}
+.gallery-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.nav-button {
+  min-height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.more {
+  padding: 1rem 3rem;
+  background: rgb(74, 68, 131);
+  color: white;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
